[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/setting.gd" type="Script" id=1]
[ext_resource path="res://ui/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/scaleDown.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/scaleUp.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/soundoption.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/title.tres" type="DynamicFont" id=6]

[node name="setting" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_right = 318.0
margin_bottom = 450.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel"]
margin_left = 48.0
margin_top = 24.0
margin_right = 298.0
margin_bottom = 448.0
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="HBoxContainer/Panel/VBoxContainer"]
margin_top = 57.0
margin_right = 250.0
margin_bottom = 82.0
size_flags_horizontal = 5
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 6 )
text = "Resolution"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/VBoxContainer"]
margin_top = 144.0
margin_right = 250.0
margin_bottom = 424.0
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="fullscreen" type="CheckButton" parent="HBoxContainer/Panel/VBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 32.0
text = "Fullscreen"
align = 1

[node name="borderless" type="CheckButton" parent="HBoxContainer/Panel/VBoxContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 250.0
margin_bottom = 69.0
text = "Borderless"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel/VBoxContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 250.0
margin_bottom = 106.0
alignment = 1

[node name="scaleDown" parent="HBoxContainer/Panel/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 32.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="HBoxContainer/Panel/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 36.0
margin_top = 4.0
margin_right = 214.0
margin_bottom = 27.0
size_flags_horizontal = 7
size_flags_stretch_ratio = 2.0
text = "scale"
align = 1

[node name="ScaleUp" parent="HBoxContainer/Panel/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 218.0
margin_right = 250.0
margin_bottom = 32.0

[node name="Panel2" type="Panel" parent="HBoxContainer"]
margin_left = 322.0
margin_right = 640.0
margin_bottom = 450.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel2"]
margin_left = 38.0
margin_top = 24.0
margin_right = 278.0
margin_bottom = 448.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="HBoxContainer/Panel2/VBoxContainer"]
margin_top = 57.0
margin_right = 240.0
margin_bottom = 82.0
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
custom_fonts/font = ExtResource( 6 )
text = "Volume"
align = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer/Panel2/VBoxContainer"]
margin_top = 144.0
margin_right = 240.0
margin_bottom = 277.0
size_flags_vertical = 2

[node name="master" parent="HBoxContainer/Panel2/VBoxContainer/VBoxContainer4" instance=ExtResource( 5 )]
margin_right = 240.0
margin_bottom = 41.0

[node name="bg" parent="HBoxContainer/Panel2/VBoxContainer/VBoxContainer4" instance=ExtResource( 5 )]
margin_top = 46.0
margin_right = 240.0
margin_bottom = 87.0

[node name="sfx" parent="HBoxContainer/Panel2/VBoxContainer/VBoxContainer4" instance=ExtResource( 5 )]
margin_top = 92.0
margin_right = 240.0
margin_bottom = 133.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 455.0
margin_right = 640.0
margin_bottom = 480.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="close" type="Button" parent="HBoxContainer2"]
margin_left = 257.0
margin_right = 318.0
margin_bottom = 25.0
text = "  close "

[node name="save" type="Button" parent="HBoxContainer2"]
margin_left = 322.0
margin_right = 383.0
margin_bottom = 25.0
text = "  save  "

[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/VBoxContainer/fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/VBoxContainer/borderless" to="." method="_on_borderless_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/VBoxContainer/HBoxContainer/scaleDown" to="." method="_on_scaleDown_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/VBoxContainer/VBoxContainer/HBoxContainer/ScaleUp" to="." method="_on_ScaleUp_pressed"]
[connection signal="pressed" from="HBoxContainer2/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="HBoxContainer2/save" to="." method="_on_save_pressed"]
